# programming-challenges

./: .gitignore  README.md
aoc/: 2015_1.ipynb  2015_2.ipynb  2015_3.ipynb  2015_4.ipynb  2015_5.ipynb  2015_6.ipynb  2015_7.ipynb  2015_8.ipynb  2015_9.ipynb  2016_1.md  2021_1.ipynb  2021_2.ipynb  2021_3.ipynb  2021_4.ipynb  2021_5.ipynb  2021_6.ipynb  2021_7.ipynb  2021_8.ipynb  Makefile  README.md  aoc.ml  dune  helper.ipynb  helper.ml  p2016_1.ml  p2016_2.ml
euler/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  25.ipynb  26.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  67.ipynb  7.ipynb  8.ipynb  9.ipynb  README.md
hackattic/: pyproject.toml  read_qr.py
praxis/: 2020_03_06.rkt  2020_03_13.rkt  2020_03_27.rkt  2020_04_03.rkt  2020_10_06.rkt  2020_10_20.rkt  2020_10_27.rkt  2020_11_06.rkt  2020_11_10.rkt  2020_11_17.rkt  2020_12_08.rkt  README.md
programming-praxis/: 2009_02_19_01.rkt  2019_10_04.rkt  2020_03_10.rkt  2020_03_13.rkt  2020_03_17.rkt  2020_03_20.rkt  2020_04_10.rkt  2020_12_08.rkt
